--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
 
-  <h1>Hello</h1>
+  <h1>Hello.</h1>
   <button>Click Me</button>
   <button>Click Me</button>
   <button>Click Me</button>
   <button>Click Me</button>
   <button>Click Me</button>
   
+  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
- 
-<script src="index.js"></script>  
+  <script src="index.js"></script>  
 </body>
 </html>
